--- a/index.html
+++ b/index.html
@@ -47,12 +47,15 @@
                         <div class="content">
                             <h2 class="major">About Me</h2>
                             <p>
-                                My name is Noah Maurer, and I am a full-stack
-                                software developer currently based out of St.
-                                Louis, MO. I am passionate about the entire
-                                process of applicatin building, from front-end
-                                to back-end. A core value of mine is to continue
-                                to grow my education everyday.
+                                Hi, I'm Noah! I am a highly motivated and
+                                skilled full-stack developer based in Saint
+                                Louis, Missouri. I have a passion for the
+                                complete development cycle of applications, from
+                                front-end design to back-end implementation. I
+                                am always eager to expand my knowledge and
+                                skills in the ever-evolving tech industry, and I
+                                am always looking for new challenges and
+                                opportunities to grow as a developer.
                             </p>
                             <a
                                 href="https://www.linkedin.com/in/noahtmaurer/"
@@ -75,11 +78,12 @@
                             <h2 class="major">Hack Reactor</h2>
                             <p>
                                 In 2022, I made the switch to a career in
-                                software development. Hack Reactor Bootcamp
-                                helped me achieve my goals of getting in to the
-                                tech world. Here I was able to acquire skills in
-                                Django, FastAPI, React, PostgreSQL, and many
-                                more.
+                                software development. One of the key highlights
+                                of my experience at Hack Reactor was the focus
+                                on hands-on learning. Each day, I worked on
+                                challenging projects that required me to apply
+                                my newly acquired skills and knowledge to
+                                real-world problems.
                             </p>
                             <a
                                 href="https://www.hackreactor.com/"
@@ -103,11 +107,13 @@
                             <p>
                                 Following my time at Hack Reactor, I began a
                                 role as a Software Engineer Immersive Resident.
-                                This role included assisting current bootcamp
-                                students in furthering their development skills.
-                                Since beginning this role, I have also been able
-                                to reinforce my skills by continuing to work on
-                                different applications and projects
+                                This role included supporting and mentoring
+                                current bootcamp students. This includes
+                                assisting them with any questions or challenges
+                                they may encounter during their bootcamp
+                                journey. I was also able to reinforce my own
+                                skills by working on various applications an
+                                projects
                             </p>
                         </div>
                     </div>
@@ -128,7 +134,16 @@
                                         alt="Reviewify"
                                 /></a>
                                 <h3 class="major">Reviewify</h3>
-                                <p>Music review application</p>
+                                <p>
+                                    Reviewify is an application that allows
+                                    users to leave reviews for albums using the
+                                    Spotify API. The reviews are then stored
+                                    within the app and can be accessed by other
+                                    users to see what people are saying about
+                                    the album. This allows music lovers to get a
+                                    better understanding of the album's
+                                    popularity, content and overall quality.
+                                </p>
                                 <p>
                                     Done using FastAPI, React, Bootsrap, Spotify
                                     API
@@ -154,7 +169,15 @@
                                 /></a>
                                 <h3 class="major">CarCar</h3>
                                 <p>
-                                    Automobile dealership management application
+                                    CarCar is an application that provides a
+                                    comprehensive solution for automobile
+                                    dealership management. The application makes
+                                    it simple to track various dealership
+                                    operations including sales, inventory,
+                                    services, customers, and employees. Overall,
+                                    CarCar is a valuable tool for automating and
+                                    optimizing dealership operations, leading to
+                                    increased productivity.
                                 </p>
                                 <p>Done using Django, React, Bootsrap</p>
                                 <a
@@ -172,7 +195,21 @@
                                         alt="Flexed"
                                 /></a>
                                 <h3 class="major">Flexed</h3>
-                                <p>Workout tracking application</p>
+                                <p>
+                                    Flexed is a fitness tracking application
+                                    that helps users keep track of their
+                                    workouts and exercise routines. The
+                                    application allows users to create and
+                                    customize their own exercises, which they
+                                    can then add to a specific workout. These
+                                    workouts can be saved and added to the
+                                    user's calendar, making it easy to track
+                                    what exercises have been done and on what
+                                    days. Whether you're a beginner or an
+                                    experienced athlete, Flexed makes it simple
+                                    to stay on top of your fitness goals and see
+                                    the results of your hard work.
+                                </p>
                                 <p>
                                     Personal project done using FastAPI, React,
                                     Redux, Bootstrap
