--- a/index.html
+++ b/index.html
@@ -108,12 +108,9 @@
                                 Following my time at Hack Reactor, I began a
                                 role as a Software Engineer Immersive Resident.
                                 This role included supporting and mentoring
-                                current bootcamp students. This includes
-                                assisting them with any questions or challenges
-                                they may encounter during their bootcamp
-                                journey. I was also able to reinforce my own
-                                skills by working on various applications an
-                                projects
+                                current bootcamp students. I was also able to
+                                reinforce my own skills by working on various
+                                applications an projects
                             </p>
                         </div>
                     </div>
