switched galvanize and hr

--- a/index.html
+++ b/index.html
@@ -71,25 +71,18 @@
                     <div class="inner">
                         <a href="#" class="image"
                             ><img
-                                src="images/hackreactor.jpeg"
-                                alt="Hack Reactor"
+                                src="images/BVZAAvRi-1-150x150.jpg"
+                                alt="Galvanize Logo"
                         /></a>
                         <div class="content">
-                            <h2 class="major">Hack Reactor</h2>
+                            <h2 class="major">Galvanize</h2>
                             <p>
-                                In 2022, I made the switch to a career in
-                                software development. One of the key highlights
-                                of my experience at Hack Reactor was the focus
-                                on hands-on learning. Each day, I worked on
-                                challenging projects that required me to apply
-                                my newly acquired skills and knowledge to
-                                real-world problems.
+                                I currently work as a Software Engineer Teaching
+                                Assistant at Galvanize. In this role I support
+                                and mentor current bootcamp students to help
+                                them along their journey in becoming a
+                                full-stack software engineer.
                             </p>
-                            <a
-                                href="https://www.hackreactor.com/"
-                                class="special"
-                                >Hack Reactor</a
-                            >
                         </div>
                     </div>
                 </section>
@@ -99,19 +92,26 @@
                     <div class="inner">
                         <a href="#" class="image"
                             ><img
-                                src="images/BVZAAvRi-1-150x150.jpg"
-                                alt="Galvanize Logo"
+                                src="images/hackreactor.jpeg"
+                                alt="Hack Reactor"
                         /></a>
                         <div class="content">
-                            <h2 class="major">Galvanize</h2>
+                            <h2 class="major">Hack Reactor</h2>
                             <p>
-                                Following my time at Hack Reactor, I began a
-                                role as a Software Engineer Immersive Resident.
-                                This role included supporting and mentoring
-                                current bootcamp students. I was also able to
-                                reinforce my own skills by working on various
-                                applications an projects
+                                In 2022, I made the switch to a career in
+                                software development and attended Hack Reactor's
+                                19 week software engineering program. One of the
+                                key highlights of my experience at Hack Reactor
+                                was the focus on hands-on learning. Each day, I
+                                worked on challenging projects that required me
+                                to apply my newly acquired skills and knowledge
+                                to real-world problems.
                             </p>
+                            <a
+                                href="https://www.hackreactor.com/"
+                                class="special"
+                                >Hack Reactor</a
+                            >
                         </div>
                     </div>
                 </section>
