--- a/index.html
+++ b/index.html
@@ -242,6 +242,12 @@
                                 >linkedin.com/in/noahtmaurer/</a
                             >
                         </li>
+                        <li class="icon solid fa-file">
+                            <a
+                                href="https://docs.google.com/document/d/1HDbNUgdilJAAdy-llSJY_BsO6ovHI1bj4HYgq-FA5gU/edit"
+                                >Resume</a
+                            >
+                        </li>
                     </ul>
                     <ul class="copyright">
                         <li>&copy; Untitled Inc. All rights reserved.</li>
