added skills section

--- a/index.html
+++ b/index.html
@@ -115,9 +115,73 @@
                         </div>
                     </div>
                 </section>
-
-                <!-- Four -->
                 <section id="four" class="wrapper alt style1">
+                    <div class="inner">
+                        <h2 class="major">Skills</h2>
+                        <div class="skills">
+                            <p>
+                                <!-- <a
+                                href="https://www.flaticon.com/free-icons/javascript"
+                                title="javascript icons"> -->
+                                <img
+                                    class="skillImg"
+                                    src="./images/java-script.png"
+                                    alt="JavaScript Logo" />
+                                <!-- </a> -->
+                            </p>
+                            <p>
+                                <img
+                                    class="skillImg"
+                                    src="./images/python.png"
+                                    alt="Python Logo" />
+                            </p>
+                            <p>
+                                <img
+                                    class="skillImg"
+                                    src="./images/icons8-django-24.png"
+                                    alt="Django Logo" />
+                            </p>
+                            <p>
+                                <img
+                                    class="skillImg"
+                                    src="./images/icons8-postgresql-50.png"
+                                    alt="PostgreSQL Logo" />
+                            </p>
+                            <p>
+                                <img
+                                    class="skillImg"
+                                    src="./images/icons8-docker-50.png"
+                                    alt="Docker Logo" />
+                            </p>
+                            <p>
+                                <img
+                                    class="skillImg"
+                                    src="./images/icons8-react-native-50.png"
+                                    alt="React Logo" />
+                            </p>
+                            <p>
+                                <img
+                                    class="skillImg"
+                                    src="./images/fastapi-icon.png"
+                                    alt="FastApi Logo" />
+                            </p>
+                            <p>
+                                <img
+                                    class="skillImg"
+                                    src="./images/icons8-html-filetype-50.png"
+                                    alt="HTML Logo" />
+                            </p>
+                            <p>
+                                <img
+                                    class="skillImg"
+                                    src="./images/icons8-css3-30.png"
+                                    alt="CSS Logo" />
+                            </p>
+                        </div>
+                    </div>
+                </section>
+
+                <section id="five" class="wrapper alt style1">
                     <div class="inner">
                         <h2 class="major">Projects</h2>
                         <p></p>
