skills section works on preview

--- a/index.html
+++ b/index.html
@@ -115,20 +115,20 @@
                         </div>
                     </div>
                 </section>
-                <!-- <section id="four" class="wrapper alt style1">
+                <section id="four" class="wrapper alt style1">
                     <div class="inner">
                         <h2 class="major">Skills</h2>
                         <div class="skills">
-                            <p> -->
-                <!-- <a
+                            <p>
+                                <!-- <a
                                 href="https://www.flaticon.com/free-icons/javascript"
                                 title="javascript icons"> -->
-                <!-- <img
+                                <img
                                     class="skillImg"
                                     src="./images/java-script.png"
-                                    alt="JavaScript Logo" /> -->
-                <!-- </a> -->
-                <!-- </p>
+                                    alt="JavaScript Logo" />
+                                <!-- </a> -->
+                            </p>
                             <p>
                                 <img
                                     class="skillImg"
@@ -179,7 +179,7 @@
                             </p>
                         </div>
                     </div>
-                </section> -->
+                </section>
 
                 <section id="five" class="wrapper alt style1">
                     <div class="inner">
