favicon and demo link

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
             name="viewport"
             content="width=device-width, initial-scale=1, user-scalable=no" />
         <link rel="stylesheet" href="assets/css/main.css" />
+        <link
+            rel="icon"
+            type="image/x-icon"
+            href="./images/document+employee+hiring+portfolio+profile+resume+icon+icon-1320196655749286634.ico" />
         <noscript
             ><link rel="stylesheet" href="assets/css/noscript.css"
         /></noscript>
@@ -220,33 +224,7 @@
                                     >Demo Video</a
                                 >
                             </article>
-                            <article>
-                                <a
-                                    href="https://gitlab.com/noahmaurer/project-beta-1"
-                                    class="image"
-                                    ><img
-                                        src="images/Screenshot 2023-02-08 at 11.58.29 AM.png"
-                                        alt="CarCar"
-                                /></a>
-                                <h3 class="major">CarCar</h3>
-                                <p>
-                                    CarCar is an application that provides a
-                                    comprehensive solution for automobile
-                                    dealership management. The application makes
-                                    it simple to track various dealership
-                                    operations including sales, inventory,
-                                    services, customers, and employees. Overall,
-                                    CarCar is a valuable tool for automating and
-                                    optimizing dealership operations, leading to
-                                    increased productivity.
-                                </p>
-                                <p>Done using Django, React, Bootsrap</p>
-                                <a
-                                    href="https://gitlab.com/noahmaurer/project-beta-1"
-                                    class="special"
-                                    >GitLab Repo</a
-                                >
-                            </article>
+
                             <article>
                                 <a
                                     href="https://gitlab.com/noahmaurer/flexed"
@@ -277,6 +255,38 @@
                                 </p>
                                 <a
                                     href="https://gitlab.com/noahmaurer/flexed"
+                                    class="special"
+                                    >GitLab Repo</a
+                                >
+                                <a
+                                    href="https://www.linkedin.com/posts/noahtmaurer_personalproject-softwareengineer-activity-7040139269004279808-5XLP?utm_source=share&utm_medium=member_desktop"
+                                    class="special"
+                                    >Demo Video</a
+                                >
+                            </article>
+                            <article>
+                                <a
+                                    href="https://gitlab.com/noahmaurer/project-beta-1"
+                                    class="image"
+                                    ><img
+                                        src="images/Screenshot 2023-02-08 at 11.58.29 AM.png"
+                                        alt="CarCar"
+                                /></a>
+                                <h3 class="major">CarCar</h3>
+                                <p>
+                                    CarCar is an application that provides a
+                                    comprehensive solution for automobile
+                                    dealership management. The application makes
+                                    it simple to track various dealership
+                                    operations including sales, inventory,
+                                    services, customers, and employees. Overall,
+                                    CarCar is a valuable tool for automating and
+                                    optimizing dealership operations, leading to
+                                    increased productivity.
+                                </p>
+                                <p>Done using Django, React, Bootsrap</p>
+                                <a
+                                    href="https://gitlab.com/noahmaurer/project-beta-1"
                                     class="special"
                                     >GitLab Repo</a
                                 >
