--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
                                 >Demo Video</a
                             >
                             <br />
-                            <a href="https://gitlab.com/noahmaurer/flexed"
-                                >GitLab Repo</a
+                            <a href="https://github.com/n-maurer/Flexed"
+                                >GitHub Repo</a
                             >
                         </section>
                         <section id="project-sections">
@@ -473,6 +473,13 @@
                                 href="https://www.linkedin.com/in/noahtmaurer/"
                                 class="icon brands style2 fa-linkedin-in"
                                 ><span class="label">LinkedIn</span></a
+                            >
+                        </li>
+                        <li>
+                            <a
+                                href="https://github.com/n-maurer"
+                                class="icon brands style2 fa-github"
+                                ><span class="label">GitHub</span></a
                             >
                         </li>
                         <li>
