--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     </ul>
                 </div>
                 <div class="image">
-                    <img src="images/noah/head-shot.jpeg" alt="" />
+                    <img src="images/noah/headshot2.jpeg" alt="" />
                 </div>
             </section>
 
