--- a/index.html
+++ b/index.html
@@ -194,6 +194,34 @@
                                 >GitLab Repo</a
                             >
                         </section>
+                        <section id="shark-bait">
+                            <img
+                                class="project-images"
+                                alt="Flexed"
+                                src="images/noah/sharkbait-low-resolution-color-logo.png" />
+                            <h3 class="project-title">SharkBait</h3>
+                            <p>
+                                Dive into the exciting world of word guessing
+                                with SharkBait, an exciting word guessing game!
+                                Whether you're a wordsmith or simply love a good
+                                challenge, SharkBait is the perfect game for
+                                players of all ages and skill levels. Unleash
+                                your inner detective as you guess the hidden
+                                words across a wide range of exciting
+                                categories. From animals to sports, movies to
+                                geography, SharkBait offers a vast collection of
+                                diverse and engaging word categories that will
+                                test your knowledge.
+                            </p>
+                            <a href="http://3.144.171.91/">SharkBait</a>
+                            <br />
+                            <a
+                                href="https://github.com/n-maurer/shark-bait"
+                                target="_blank"
+                                rel="noopener noreferrer"
+                                >GitHub Repo</a
+                            >
+                        </section>
                         <section id="project-sections">
                             <img
                                 class="project-images"
